- Made the app works in portrait only - Uploaded some missing files.

--- a/Swoosh/Base.lproj/Main.storyboard
+++ b/Swoosh/Base.lproj/Main.storyboard
@@ -7,10 +7,10 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--WelcomeVC-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="Swoosh" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="WelcomeVC" customModule="Swoosh" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -52,6 +52,9 @@
                                 <state key="normal" title="Get Started">
                                     <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 </state>
+                                <connections>
+                                    <segue destination="hkQ-kY-o9R" kind="show" id="SkL-sq-REU"/>
+                                </connections>
                             </button>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -86,19 +89,19 @@
             </objects>
             <point key="canvasLocation" x="136.80000000000001" y="126.35467980295567"/>
         </scene>
-        <!--View Controller-->
+        <!--LeagueVC-->
         <scene sceneID="IIn-0c-qsS">
             <objects>
-                <viewController id="hkQ-kY-o9R" sceneMemberID="viewController">
+                <viewController id="hkQ-kY-o9R" customClass="LeagueVC" customModule="Swoosh" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="Det-li-8zz">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="758"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="desiredLeagueBG" translatesAutoresizingMaskIntoConstraints="NO" id="HYH-Wk-yDx">
-                                <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="758"/>
                             </imageView>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="30" translatesAutoresizingMaskIntoConstraints="NO" id="L71-2U-uvm">
-                                <rect key="frame" x="10" y="210" width="355" height="210"/>
+                                <rect key="frame" x="10" y="166" width="355" height="210"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="nzB-TX-Hon" customClass="BorderButton" customModule="Swoosh" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="0.0" width="355" height="50"/>
@@ -136,7 +139,7 @@
                                 </subviews>
                             </stackView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="lGY-2z-XOP" customClass="BorderButton" customModule="Swoosh" customModuleProvider="target">
-                                <rect key="frame" x="10" y="708" width="355" height="50"/>
+                                <rect key="frame" x="10" y="654" width="355" height="50"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.50933754279999999" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="50" id="1WV-XH-Xo1"/>
@@ -147,7 +150,7 @@
                                 </state>
                             </button>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="48" translatesAutoresizingMaskIntoConstraints="NO" id="LF0-kL-1K8">
-                                <rect key="frame" x="0.0" y="64" width="375" height="96"/>
+                                <rect key="frame" x="0.0" y="20" width="375" height="96"/>
                                 <subviews>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="swooshLogo" translatesAutoresizingMaskIntoConstraints="NO" id="p1k-Vc-9gB">
                                         <rect key="frame" x="128" y="0.0" width="119" height="20"/>
@@ -160,6 +163,17 @@
                                     </label>
                                 </subviews>
                             </stackView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="yEh-fL-w5d">
+                                <rect key="frame" x="20" y="20" width="29" height="24"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="24" id="8kJ-Cm-MJf"/>
+                                    <constraint firstAttribute="width" constant="29" id="Osc-xs-8aB"/>
+                                </constraints>
+                                <state key="normal" image="backButton"/>
+                                <connections>
+                                    <segue destination="A1u-F8-aKY" kind="unwind" unwindAction="unwindFromSkillVCWithUnwindSegue:" id="Nxz-lj-Yh0"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <constraints>
@@ -168,7 +182,9 @@
                             <constraint firstItem="hzo-X6-0jb" firstAttribute="bottom" secondItem="lGY-2z-XOP" secondAttribute="bottom" constant="20" id="4Bq-Za-RoN"/>
                             <constraint firstItem="LF0-kL-1K8" firstAttribute="leading" secondItem="hzo-X6-0jb" secondAttribute="leading" id="9tT-jj-q7e"/>
                             <constraint firstItem="hzo-X6-0jb" firstAttribute="trailing" secondItem="lGY-2z-XOP" secondAttribute="trailing" constant="10" id="Cbs-me-xVs"/>
+                            <constraint firstItem="yEh-fL-w5d" firstAttribute="leading" secondItem="hzo-X6-0jb" secondAttribute="leading" constant="20" id="CfE-aw-Hr1"/>
                             <constraint firstItem="LF0-kL-1K8" firstAttribute="top" secondItem="hzo-X6-0jb" secondAttribute="top" constant="20" id="OVP-I0-biG"/>
+                            <constraint firstItem="yEh-fL-w5d" firstAttribute="top" secondItem="hzo-X6-0jb" secondAttribute="top" constant="20" id="PrQ-Zx-Qe7"/>
                             <constraint firstItem="HYH-Wk-yDx" firstAttribute="trailing" secondItem="hzo-X6-0jb" secondAttribute="trailing" id="TBe-9v-nne"/>
                             <constraint firstItem="HYH-Wk-yDx" firstAttribute="top" secondItem="Det-li-8zz" secondAttribute="top" id="b5s-KF-Anz"/>
                             <constraint firstItem="lGY-2z-XOP" firstAttribute="leading" secondItem="hzo-X6-0jb" secondAttribute="leading" constant="10" id="eON-sS-3eg"/>
@@ -179,15 +195,17 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="hzo-X6-0jb"/>
                     </view>
+                    <navigationItem key="navigationItem" id="a7c-Ie-nhC"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ngF-4W-JpV" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+                <exit id="A1u-F8-aKY" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
-            <point key="canvasLocation" x="831" y="126"/>
+            <point key="canvasLocation" x="829.60000000000002" y="125.61576354679804"/>
         </scene>
-        <!--View Controller-->
+        <!--SkillVC-->
         <scene sceneID="CiI-jZ-Bhi">
             <objects>
-                <viewController id="XBT-6G-LpO" sceneMemberID="viewController">
+                <viewController id="XBT-6G-LpO" customClass="SkillVC" customModule="Swoosh" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="uC3-Us-dZk">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -273,6 +291,7 @@
         </scene>
     </scenes>
     <resources>
+        <image name="backButton" width="29" height="24"/>
         <image name="beginnerBallerBG" width="414" height="736"/>
         <image name="desiredLeagueBG" width="414" height="736"/>
         <image name="swooshLogo" width="119" height="20"/>
